Add image struct
